# hw_2

./: .gitignore  CMakeLists.txt  README.md  ci.yml
.github/workflows/: ci.yml
data/: consistent_time.txt  parallel_res.txt  parallel_time.txt
project/: input_data.c  input_data.h  main.c  parallel_prog.c  prog.c  prog.h
tests/: comparison.cpp  input_test.cpp  parallel_prog_test.cpp  prog_test.cpp
